# internal/interface/api/rest/dto/response/refresh.go
@@ -1,5 +1,0 @@
-package response
-
-type Refresh struct {
-	AccessToken string `json:"access_token"`
-}
