# internal/interface/api/rest/handlers/chatting.go
@@ -8,23 +8,22 @@ import (
 	"log/slog"
 	"net/http"
 	"net/url"
-	"strings"
 	"time"
 
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/application/command"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/application/model"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/application/query"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/application/service/chatting"
+	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/domain"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/domain/models"
-	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/infrastructure/auth/jwt"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/interface/api/rest/dto/request"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/interface/api/rest/dto/response"
+	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/interface/api/rest/middlewares"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/interface/api/rest/pkg"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/internal/interface/pkg/rate"
 	"github.com/ChronoFlow-Corp/spiry-backend-go/pkg/slctx"
 	"github.com/coder/websocket"
 	"github.com/go-chi/chi/v5"
-	exJwt "github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 )
 
@@ -42,17 +41,28 @@ func NewChattingModule(service chatting.Service, j JWTProvider) *ChattingModule 
 }
 
 func (m *ChattingModule) Register(r chi.Router) {
-	r.Get("/ws", m.Execute)
+	r.Route("/chatting", func(r chi.Router) {
+		r.Use(middlewares.TryAuthJwt(m.JWTProvider))
+		r.Get("/ws", m.Execute)
 
-	r.Route("/chats", func(r chi.Router) {
-		r.Get("/", m.GetChats)
+		r.Get("/chat", m.GetChats)
+		r.Patch("/chat", m.UpdateChat)
+		r.Delete("/chat", m.DeleteChat)
 	})
 }
 
 // GetChats godoc
+//
+//	@Summary	get chats list or chat history selected chat.
+//	@Tags		chatting
+//	@Produce	json
+//	@Param		chat_id	query		string	false	"If provided return chat object with history"
+//	@Success	200		{object}	[]response.Chat
+//	@Failure	400		{object}	response.Error
+//	@Failure	401		{object}	response.Error
+//	@Failure	404		{object}	response.Error
+//	@Router		/api/chatting/chat [get]
 func (m *ChattingModule) GetChats(w http.ResponseWriter, r *http.Request) {
-	ctx := m.addTokenCtx(r.Context(), w, r)
-
 	var chatID *uuid.UUID
 	q := r.URL.Query().Get("chat_id")
 	if q != "" {
@@ -68,7 +78,7 @@ func (m *ChattingModule) GetChats(w http.ResponseWriter, r *http.Request) {
 		chatID = &v
 	}
 
-	res, err := m.service.GetChats(ctx, query.GetChats{
+	res, err := m.service.GetChats(r.Context(), query.GetChats{
 		ChatID: chatID,
 	})
 	if err != nil {
@@ -112,19 +122,135 @@ func (m *ChattingModule) GetChats(w http.ResponseWriter, r *http.Request) {
 	pkg.RespondOK(w, chats)
 }
 
+// UpdateChat godoc
+//
+//	@Summary	update chat title
+//	@Tags		chatting
+//	@Accept		json
+//	@Produce	json
+//	@Param		chat_info	body	request.UpdateChat	true	"Payload"
+//	@Success	200
+//	@Failure	400	{object}	response.Error
+//	@Failure	404	{object}	response.Error
+//	@Router		/api/chatting/chat [patch]
+func (m *ChattingModule) UpdateChat(w http.ResponseWriter, r *http.Request) {
+	var req request.UpdateChat
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		slctx.Logger(r.Context()).Debug("Failed to decode body", slog.Any("error", err))
+		pkg.RespondError(w, http.StatusBadRequest, response.Error{
+			Code:    http.StatusBadRequest,
+			Message: fmt.Sprintf("Invalid request body: %s", err.Error()),
+		})
+
+		return
+	}
+
+	err = m.service.UpdateTitle(
+		r.Context(),
+		command.UpdateTitle{Title: req.NewTitle, ChatID: req.ChatID},
+	)
+	if err != nil {
+		slctx.Logger(r.Context()).Debug("Failed to update title", slog.Any("error", err))
+
+		var notFound *domain.ErrorNotFound
+		if errors.As(err, &notFound) {
+			pkg.RespondError(w, http.StatusNotFound, response.Error{
+				Code:    http.StatusNotFound,
+				Message: fmt.Sprintf("%s not found: %s", notFound.FieldName, notFound.FieldValue),
+			})
+
+			return
+		}
+		pkg.RespondError(w, http.StatusInternalServerError, response.Error{
+			Code:    http.StatusInternalServerError,
+			Message: "Internal server error",
+		})
+		return
+	}
+
+	pkg.RespondOK(w, nil)
+}
+
+// DeleteChat godoc
+//
+//	@Summary	Delete chat
+//	@Tags		chatting
+//	@Param		chat_id	query	string	true	"ID for delete"
+//
+//	@Success	200
+//	@Failure	400	{object}	response.Error
+//	@Failure	404	{object}	response.Error
+//	@Router		/api/chatting/chat [delete]
+func (m *ChattingModule) DeleteChat(w http.ResponseWriter, r *http.Request) {
+	q := r.URL.Query().Get("chat_id")
+	if q == "" {
+		pkg.RespondError(w, http.StatusBadRequest, response.Error{
+			Code:    http.StatusBadRequest,
+			Message: "ChatID query not provided",
+		})
+
+		return
+	}
+
+	chatID, err := uuid.Parse(q)
+	if err != nil {
+		pkg.RespondError(w, http.StatusBadRequest, response.Error{
+			Code:    http.StatusBadRequest,
+			Message: fmt.Sprintf("Invalid chat_id provided: %s", q),
+		})
+
+		return
+	}
+
+	err = m.service.DeleteChat(r.Context(), command.DeleteChat{ChatID: chatID})
+	if err != nil {
+		slctx.Logger(r.Context()).Debug("Failed to delete chat", slog.Any("error", err))
+		var notFound *domain.ErrorNotFound
+		if errors.As(err, &notFound) {
+			pkg.RespondError(w, http.StatusNotFound, response.Error{
+				Code:    http.StatusNotFound,
+				Message: fmt.Sprintf("%s not found: %s", notFound.FieldName, notFound.FieldValue),
+			})
+
+			return
+		}
+
+		slctx.Logger(r.Context()).Error("Failed to delete chat", slog.Any("error", err))
+		pkg.RespondError(w, http.StatusInternalServerError, response.Error{
+			Code:    http.StatusInternalServerError,
+			Message: "Internal server error",
+		})
+	}
+
+	pkg.RespondOK(w, nil)
+}
+
+// Execute godoc
+//
+//	@Summary	Connection to ws
+//	@Tags		chatting
+//	@Accept		json
+//	@Produce	json
+//	@Param		Upgrade					header	string	true	"websocket"
+//	@Param		Connection				header	string	true	"upgrade"
+//	@Param		Sec-WebSocket-Protocol	header	string	true	"need access token if exist also provide bearer prefix"	example("Bearer <token>")
+//	@Router		/api/chatting/ws [get]
 func (m *ChattingModule) Execute(w http.ResponseWriter, r *http.Request) {
-	conn, err := websocket.Accept(w, r, &websocket.AcceptOptions{Subprotocols: []string{"json"}})
+	conn, err := websocket.Accept(w, r, &websocket.AcceptOptions{
+		Subprotocols: []string{"json"},
+	})
 	if err != nil {
 		slctx.Logger(r.Context()).Error("websocket accept error", slog.Any("error", err))
 	}
 
 	l := rate.NewLimiter(time.Millisecond*100, 10)
 
+	logger := slctx.Logger(r.Context())
+	ctx := addCredosToCtx(r.Context())
+	slctx.WithLogger(ctx, logger)
 	for {
-		ctx := m.addTokenCtx(context.Background(), w, r)
-		//TODO: add logger
-
-		err = m.accept(ctx, conn, l, slctx.Logger(r.Context()))
+		err = m.accept(ctx, conn, l)
 		if websocket.CloseStatus(err) == websocket.StatusNormalClosure {
 			slctx.Logger(r.Context()).Debug("websocket connection closed")
 			return
@@ -141,7 +267,6 @@ func (m *ChattingModule) accept(
 	ctx context.Context,
 	conn *websocket.Conn,
 	l *rate.Limiter,
-	log *slog.Logger,
 ) error {
 	ctx, cancel := context.WithTimeout(ctx, time.Minute*5)
 	defer cancel()
@@ -201,53 +326,18 @@ func (m *ChattingModule) accept(
 	return nil
 }
 
-func (m *ChattingModule) addTokenCtx(
-	ctx context.Context,
-	w http.ResponseWriter,
-	r *http.Request,
-) context.Context {
-	raw := r.Header.Get("Authorization")
-	if raw == "" {
-		return ctx
-	}
-	if !strings.HasPrefix(raw, "Bearer ") {
-		return ctx
+func addCredosToCtx(ctx context.Context) context.Context {
+	newContext := context.Background()
+
+	userID, ok := ctx.Value(models.UserIDCtxKey{}).(uuid.UUID)
+	if ok {
+		newContext = context.WithValue(newContext, models.UserIDCtxKey{}, userID)
 	}
 
-	rawToken := strings.TrimPrefix(raw, "Bearer ")
-	if rawToken == "" {
-		return ctx
+	sessionID, ok := ctx.Value(models.SessionIDCtxKey{}).(uuid.UUID)
+	if ok {
+		newContext = context.WithValue(newContext, models.SessionIDCtxKey{}, sessionID)
 	}
 
-	token, err := m.JWTProvider.ParseAccess(rawToken, exJwt.ParseRSAPublicKeyFromPEM)
-	if err != nil {
-		if errors.Is(err, jwt.ErrExpired) {
-			slctx.Logger(r.Context()).Debug("Token expired")
-			pkg.RespondError(
-				w,
-				http.StatusUnauthorized,
-				response.Error{Message: "Token expired"},
-			)
-		}
-
-		if errors.Is(err, jwt.ErrInvalid) {
-			slctx.Logger(r.Context()).Debug("Token invalid")
-			pkg.RespondError(
-				w,
-				http.StatusUnauthorized,
-				response.Error{Message: "Token invalid"},
-			)
-		}
-
-		slctx.Logger(r.Context()).Error("Token parse error",
-			slog.String("token", rawToken),
-			slog.Any("err", err))
-
-		return ctx
-	}
-
-	ctx = context.WithValue(r.Context(), models.UserIDCtxKey{}, token.UserID)
-	ctx = context.WithValue(ctx, models.SessionIDCtxKey{}, token.SessionID)
-
-	return ctx
+	return newContext
 }
